fixed overlapping issue

--- a/src/Pages/BrowsePage/BrowsePage.scss
+++ b/src/Pages/BrowsePage/BrowsePage.scss
@@ -36,3 +36,17 @@
     justify-content: center;
   }
 }
+
+@media only screen and (max-width: 768px) {
+  .BrowsePage {
+    section.your-widgets {
+      .container {
+        select {
+          left: 50%;
+          top: -40px;
+          transform: translateX(-50%);
+        }
+      }
+    }
+  }
+}
